fixed alignment issue

--- a/src/app/components/trainer-card/trainer-card.component.scss
+++ b/src/app/components/trainer-card/trainer-card.component.scss
@@ -67,5 +67,6 @@
         width: 2.5rem;     
         height: 2.5rem;
         max-height: 2.5rem;
+        transform: translate(-0.8px, -0.1px)
     }
 }
